<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Display</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="editName">Enter Your Name</string>
    <string name="editAge">Enter Your Age</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="result">Result :</string>
     <string name="resultButton">Result</string>
     <string name="tName">My Name is :</string>
     <string name="tName2"> Your Name  </string>
     <string name="tAge">My Age : </string>
     <string name="tAge2"> Your Age</string>
     <string name="years"> Years</string>
    

</resources>
